fix: color contrast issue

--- a/src/styles/components/_read-the-docs.css
+++ b/src/styles/components/_read-the-docs.css
@@ -1,3 +1,3 @@
 .cmp-read-the-docs {
-  color: #888;
+  color: #999;
 }
